Fix styling problem occuring with wrapping titles.

--- a/app/assets/stylesheets/team.css.scss
+++ b/app/assets/stylesheets/team.css.scss
@@ -42,6 +42,7 @@ $blue: #00A0BE;
     text-align: center;
     width: 100%;
     margin: 0 auto;
+    height: 50px;
 }
 
 .team-section-title {
@@ -78,6 +79,7 @@ $blue: #00A0BE;
     text-align: center;
     width: 100%;
     margin: 0 auto;
+    height: 50px;
 }
 
 .white {
